--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "mathjs": "^14.5.2",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
   },
